# gcimopt

./: .gitignore  .pre-commit-config.yaml  README.md  eval.sh  generate.sh  pyproject.toml  train.sh
experiments/: cartpole.py  double_integrator.py  drone2d.py  drone3d.py  experiment.py  robot_reach.py  run.py
experiments/config/: config.yaml
experiments/config/experiment/: cartpole.yaml  double_integrator.yaml  drone2d.yaml  drone3d.yaml  robot_reach.yaml
experiments/config/experiment/policy_model/: mlp_2_128.yaml  mlp_2_16_tanh.yaml  mlp_2_32.yaml  mlp_2_64.yaml  mlp_4_128.yaml  mlp_4_32.yaml  mlp_4_64.yaml
experiments/resources/: fer_franka_hand.urdf
src/gcimopt/: generate.py  ocp.py  policies.py  trajectory_buffer.py
