[project]
name = "gcimopt"
version = "0.1.0"
description = "Learning efficient goal-conditioned policies by imitating optimal trajectories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "casadi>=3.7.2",
    "diffrax>=0.7.0",
    "equinox>=0.13.4",
    "gymnasium>=1.2.3",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.9.0",
    "jaxadi>=0.4.0",
    "jaxtyping>=0.3.6",
    "numpy>=2.4.1",
    "optax>=0.2.6",
    "panda-gym>=3.0.7",
    "pathos>=0.3.5",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "urdf-to-casadi>=0.1.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.3",
    "pre-commit>=4.5.1",
    "reorder-python-imports>=3.16.0",
]
